--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
 			<form class="login100-form validate-form">
 				<span class="login100-form-title p-b-37">
-					Learn Unity with C#
+					Learn Unity with C#<br> Members Login
 				</span>
 
 				<div class="wrap-input100 validate-input m-b-20" data-validate="Enter username or email">
@@ -52,7 +52,7 @@
 						Sign In
 					</button>
 				</div>
-
+<!--
 				<div class="text-center p-t-57 p-b-20">
 					<span class="txt1">
 						Or login with
@@ -74,6 +74,7 @@
 						Sign Up
 					</a>
 				</div>
+				-->
 			</form>
 
 			
