--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 		
 		if(us == "xrcenter" && pas == "epirus")
 		{
+			alert ("Login successfully");
 			window.location = "index2.html";
 		}
 	}
