--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 			alert ("Login successfully");
 			window.location = "index2.html";
 		}
+		else
+		{
+			alert ("Wrong password");
+
+		}
 	}
 
 	</script>
