--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		if(us == "xrcenter" && pas == "epirus")
 		{
 			alert ("Login successfully");
-			window.location.href = "https://ksakkas.github.io/Learn-Unity-Intro/index2.html";
+			location.replace("https://ksakkas.github.io/Learn-Unity-Intro/index2.html");
 		}
 		else
 		{
