--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		
 		if(us == "xrcenter" && pas == "epirus")
 		{
-			alert ("Login successfully");
+			//alert ("Login successfully");
 			location.replace("https://ksakkas.github.io/Learn-Unity-Intro/index2.html");
 		}
 		else
