--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		if(us == "xrcenter" && pas == "epirus")
 		{
 			//alert ("Login successfully");
-			location.replace("https://ksakkas.github.io/Learn-Unity-Intro/index2.html");
+			 window.location = "https://ksakkas.github.io/Learn-Unity-Intro/index2.html";
 		}
 		else
 		{
