--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 		
 		if(us == "xrcenter" && pas == "epirus")
 		{
-			//alert ("Login successfully");
-			 window.location = "https://ksakkas.github.io/Learn-Unity-Intro/index2.html";
+			alert ("Login successfully <br> <a href="https://ksakkas.github.io/Learn-Unity-Intro/index2.html">Click here</a>");
+			//window.location = "https://ksakkas.github.io/Learn-Unity-Intro/index2.html";
 		}
 		else
 		{
